# qlibc

./: CMakeLists.txt  dev.sh
.github/workflows/: ci-run-test-extensions.yml  cmake-multi-platform.yml
src/: Makefile.in
tests/: CMakeLists.txt  Makefile.in
